Improve translation; add parameter fields on detail page

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -128,5 +128,36 @@
     "header_quotes": "Quotes",
     "header_last_updated": "Last Updated", 
     "header_creator": "Creator",
-    "header_actions": "Actions"
+    "header_actions": "Actions",
+    "field_hair_texture": "Hair Texture",
+    "field_hair_part": "Hair Part", 
+    "field_layers": "Layers",
+    "field_hair_bangs": "Hair Bangs",
+    "field_special_notes": "Special Notes",
+    "field_hair_texture": "Hair Texture",
+    "field_hair_part": "Hair Part", 
+    "field_layers": "Layers",
+    "field_hair_bangs": "Hair Bangs",
+    "field_special_notes": "Special Notes",
+    "quote_dialog_title": "Submit Quote",
+    "quote_dialog_update_title": "Update Quote",
+    "quote_dialog_description": "Enter your price and estimated delivery date",
+    "quote_dialog_update_description": "Update your quote information",
+    "price_rmb": "Price (RMB)",
+    "delivery_date": "Delivery Date",
+    "pick_date": "Pick a date",
+    "cancel": "Cancel",
+    "submit_quote": "Submit Quote",
+    "update_your_quote": "Update Your Quote",
+    "submit_your_quote": "Submit Your Quote",
+    "enter_price_and_delivery_description": "Enter your price in RMB and delivery date for",
+    "enter_price_rmb": "Enter price in RMB", 
+    "delivery_date": "Delivery Date",
+    "pick_date": "Pick a date",
+    "message": "Message",
+    "add_operational_notes": "Add operational notes about this quote (optional)",
+    "characters": "characters", 
+    "submitting": "Submitting...",
+    "update_quote": "Update Quote",
+    "submit_quote_rmb": "Submit Quote (RMB)"
     }
