--- a/public/locales/zh.json
+++ b/public/locales/zh.json
@@ -128,5 +128,36 @@
     "header_quotes": "报价", 
     "header_last_updated": "最后更新",
     "header_creator": "创建者",
-    "header_actions": "操作"
+    "header_actions": "操作",
+    "field_hair_texture": "头发质地",
+    "field_hair_part": "分发线",
+    "field_layers": "发型层次",
+    "field_hair_bangs": "刘海样式",
+    "field_special_notes": "特殊说明",
+    "field_hair_texture": "头发质地",
+    "field_hair_part": "分发线", 
+    "field_layers": "层次",
+    "field_hair_bangs": "刘海",
+    "field_special_notes": "特殊说明",
+    "quote_dialog_title": "提交报价",
+    "quote_dialog_update_title": "更新报价",
+    "quote_dialog_description": "输入您的报价金额和预计交付日期",
+    "quote_dialog_update_description": "更新您的报价信息",
+    "price_rmb": "价格 (人民币)",
+    "delivery_date": "交付日期",
+    "pick_date": "选择日期",
+    "cancel": "取消",
+    "update_your_quote": "更新您的报价",
+    "submit_your_quote": "提交您的报价", 
+    "enter_price_and_delivery_description": "为以下产品输入人民币价格和交付日期",
+    "enter_price_rmb": "输入人民币价格",
+    "delivery_date": "交付日期",
+    "pick_date": "选择日期",
+    "message": "留言",
+    "add_operational_notes": "添加关于此报价的操作说明（可选）",
+    "characters": "字符",
+    "submitting": "提交中...",
+    "update_quote": "更新报价",
+    "submit_quote_rmb": "提交报价 (人民币)"
+    
 }
